# MARDUK

./: .dockerignore  .gitignore  Dockerfile  README.md  _debug_pod.txt  _v11_output.txt  dashboard.html  deploy.ps1  deploy_runpod.py  entrypoint.sh  gui.py  kaggle_notebook.py  kaggle_notebook_v7.py  kernel-metadata.json  pyproject.toml  requirements.txt  runpod_start.sh  setup_docker_wsl.ps1  train_log2_full.txt  upload_to_hf.py  web_dashboard.py
configs/data/: normalized.yaml  raw.yaml
configs/model/: byt5_base.yaml  byt5_large.yaml  byt5_plain.yaml  mamba_byt5.yaml  mamba_enc_txd_dec_base.yaml
configs/train/: b200.yaml  baseline.yaml  byt5_expanded.yaml  byt5_finetune.yaml  byt5_large_b200.yaml  byt5_plain.yaml  hybrid.yaml  mamba_byt5_finetune.yaml
data/augmented/: augmented_pairs.csv
docs/: REPORT.md  architecture.md  data_contract.md  experiment_matrix.md  metrics.md  runbook.md  scaffold-readme.md
scripts/: check_truncations.py  check_truncations2.py  check_truncations3.py  convert_mamba_to_plain.py  eval_all.sh  prepare_data.sh  push_model_hf.sh  train_byt5.sh  train_byt5_large.sh  train_hybrid.sh
src/data/: bio_labels.py  build_dual_view.py  collators.py  expand_training.py  load_kaggle.py  normalize.py  prepare.py  prepare_plain.py  splitters.py
src/eval/: aggregate_reports.py  decode.py  decode_byt5.py  error_buckets.py  metrics.py
src/models/: heads.py  hybrid_seq2seq.py  mamba_adapter_byt5.py  mamba_encoder.py
src/train/: train_byt5.py  train_hybrid.py  train_mamba_byt5.py
src/utils/: io.py  logging.py  seed.py
static/: index.html
