[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marduk"
version = "0.1.0"
description = "MARDUK: Mamba-Augmented Reconstruction & Decoding of Unknown Kuneiform — Akkadian-to-English neural machine translation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.33.0",
  "datasets>=2.20.0",
  "evaluate>=0.4.2",
  "numpy>=1.26.0",
  "omegaconf>=2.3.0",
  "packaging>=24.1",
  "pandas>=2.2.2",
  "pyyaml>=6.0.2",
  "sacrebleu>=2.4.2",
  "scikit-learn>=1.5.1",
  "sentencepiece>=0.2.0",
  "torch>=2.3.1",
  "tqdm>=4.66.4",
  "transformers>=4.44.0",
]

[project.optional-dependencies]
mamba = [
  "mamba-ssm>=2.2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
